--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,36 @@ body h1 {
   padding: 0;
 }
 
+/* Header & Nav */
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 60px 60px 80px 60px;
+}
+
 /* HEROSTAGE */
 
 .herostage {
-  height: 600px;
+  height: 700px;
+  display: flex;
+  align-items: center;
+}
+
+.herostage #h1 {
+  margin: 200px 0;
+}
+.logo {
+  height: 35px;
 }
 
 h1,
-h2,
+h2 {
+  margin: 3.5rem 0;
+}
+
 h3,
 h4 {
   margin: 2.5rem 0;
@@ -57,6 +79,12 @@ h4 {
 
 .jumbotron {
   background-color: white;
+}
+
+.nav a {
+  color: black;
+  font-size: 20px;
+  font-weight: 90;
 }
 
 /* Image Teaser 4/4/4 */
@@ -160,4 +188,3 @@ h4 {
   background-color: grey;
   margin: 10px;
 }
-
