--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body h1 {
@@ -42,6 +44,17 @@ body h1 {
   padding: 0;
 }
 
+.section-size-l-center {
+  height: 700px;
+  display: flex;
+  align-items: center;
+}
+
+.section-size-m-center {
+  height: 350px;
+  display: flex;
+  align-items: center;
+}
 /* Header & Nav */
 
 header {
@@ -54,11 +67,7 @@ header {
 
 /* HEROSTAGE */
 
-.herostage {
-  height: 700px;
-  display: flex;
-  align-items: center;
-}
+
 
 .herostage #h1 {
   margin: 200px 0;
@@ -89,6 +98,7 @@ h4 {
 
 /* Image Teaser 4/4/4 */
 
+
 .image-teaser .card {
   padding-right: 140px;
   border-style: none;
@@ -112,6 +122,7 @@ h4 {
 
 /* Textblock 4/8 4/4/4 */
 
+
 .textblock .jumbotron {
   display: flex;
   flex-direction: row;
@@ -121,6 +132,8 @@ h4 {
 }
 
 /* Textteaser 4/8 4/4/4 */
+
+
 
 .text-teaser .card-group {
   display: flex;
